[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-engine"
version = "0.1.0"
description = "Aggregate codebase files into a single context file for LLM consumption."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
context-engine = "context_engine.main:main"

[tool.setuptools.packages.find]
include = ["context_engine*"]
